# tap-ms-dynamics

./: README.md  pyproject.toml
tap_dynamics/: __init__.py  client.py  transform.py
tests/: base.py
