[tool.poetry]
name = "tap-ms-dynamics"
version = "0.1.0"
description = "Singer.io tap for the Microsoft Dataverse Web API"
authors = ["Stitch","Mark Johnston <mj2.squ@gmail.com>"]
readme = "README.md"
packages = [{include = "tap_dynamics"}]

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
backoff = "1.8.0"
certifi = "2023.7.22"
chardet = "4.0.0"
ciso8601 = "2.1.3"
idna = "2.10"
jsonschema = "2.6.0"
python-dateutil = "2.8.1"
pytz = "2018.4"
requests = "2.25.1"
simplejson = "3.11.1"
singer-python = "5.10.0"
six = "1.15.0"
urllib3 = "1.26.3"

[tool.poetry.scripts]
tap-ms-dynamics = 'tap_dynamics:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
